--- a/android/build.gradle
+++ b/android/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.zxing:core:3.4.0'
-    implementation files('lib/TCVN-3.jar')
+    implementation files('lib_charsets/TCVN-3.jar')
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
